--- a/02-c#-blazor-simple-app/BlazorApp1/Client/BlazorApp1.Client.csproj
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/BlazorApp1.Client.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\0701ActorsShow.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.10" PrivateAssets="all" />
   </ItemGroup>
