--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Deploy to GitHub Pages
 
-# Run workflow on every push to the master branch 
+# Run workflow on every push to the master branch
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   deploy-to-github-pages:
@@ -12,16 +12,29 @@ jobs:
     steps:
     # uses GitHub's checkout action to checkout code form the master branch
     - uses: actions/checkout@v2
-    # sets up .NET Core SDK 6
+    
+    # sets up .NET Core SDK 3.1
     - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0
+        dotnet-version: 3.1
+
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish 02-c#-blazor-simple-app/BlazorApp1/Client/BlazorApp1.Client.csproj -c Release -o release --nologo
-    run: touch release/wwwroot/.nojekyll
-    # commit wwwroot to github pages
+      run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
+    
+    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+      run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorGitHubPagesDemo\/" \/>/g' release/wwwroot/index.html
+    
+    # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
+
+    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
+      
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
