--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
     - name: Setup .NET Core SDK
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6
-
+        dotnet-version: 6.0
+    
     # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
+      run: dotnet publish 02-c#-blazor-simple-app/BlazorApp1/Client/BlazorApp1.Client.csproj -c Release -o release --nologo
     
     # changes the base-tag in index.html from '/' to 'ekof-dss.github.io/teaching-samples' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to ekof-dss.github.io/teaching-samples
@@ -35,6 +35,7 @@ jobs:
     - name: Add .nojekyll file
       run: touch release/wwwroot/.nojekyll
       
+    # commit wwwroot to github pages
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
