--- a/05-c#-supabase/01-with-request/01-c#-supabase-request.csproj
+++ b/05-c#-supabase/01-with-request/01-c#-supabase-request.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_01_with_request</RootNamespace>
+    <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>project</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="supabase" Version="1.1.1" />
+  </ItemGroup>
 
 </Project>
